--- a/css/main.css
+++ b/css/main.css
@@ -58,6 +58,8 @@ label {
   position: relative;
   width: 1060px;
   height: 1500px;
+  margin: 0px 0px 10px 0px;
+  padding-top: 20px;
 }
 
 #stat_graphs svg {
